test/files/neg/t5426.check
t5426.scala:4: warning: comparing values of types Some[Int] and Int using `==` will always yield false
  def f1 = Some(5) == 5
                   ^
t5426.scala:5: warning: comparing values of types Int and Some[Int] using `==` will always yield false
  def f2 = 5 == Some(5)
             ^
t5426.scala:10: warning: comparing values of types Int and Some[Int] using `==` will always yield false
  (x1 == x2)
      ^
t5426.scala:11: warning: comparing values of types Some[Int] and Int using `==` will always yield false
  (x2 == x1)
      ^
4 warnings
error: No warnings can be incurred under -Werror.
